fix overlay on mobile

--- a/style.css
+++ b/style.css
@@ -122,6 +122,7 @@ ul,ol         { list-style:none; }
 	background: none repeat scroll 0 0 rgba(0, 0, 0, 0.5);
 	height: 100%;
 	width: 100%;
+	display: inline-block;
 }
 
 .site_logo{
